meeting list fix month overlapping meetings; meeting list mobile style

--- a/src/app/content/meetings/components/meeting-list-tile/meeting-list-tile.component.scss
+++ b/src/app/content/meetings/components/meeting-list-tile/meeting-list-tile.component.scss
@@ -1,8 +1,7 @@
 @import "../../../../../colors";
 
 sr-panel {
-  width: 275px;
-  height: 275px;
+  width: 100%;
 }
 
 .meeting {
