--- a/src/app/content/meetings/components/meeting-list/meeting-list.component.scss
+++ b/src/app/content/meetings/components/meeting-list/meeting-list.component.scss
@@ -16,13 +16,14 @@ sr-meeting-list-tile {
   //border-radius: 24px;
   display: block;
   margin: 12px 12px 36px;
+  width: 275px;
 }
 
 @media only screen and (max-width: 450px) {
-  .meeting-year {
-    text-align: center;
-  }
   .meetings {
     justify-content: center;
+  }
+  sr-meeting-list-tile {
+    width: 100%;
   }
 }
